# RefBox-Plugin

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: ABButton.cpp  ABButton.h  MeterPanel.cpp  MeterPanel.h  RefBoxLookAndFeel.h  ReferenceGrid.cpp  ReferenceGrid.h  ReferencePanel.cpp  ReferencePanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  SystemSimPanel.cpp  SystemSimPanel.h  TopBar.cpp  TopBar.h  WaveformDisplay.cpp  WaveformDisplay.h  WaveformMicroscope.cpp  WaveformMicroscope.h
Source/DSP/: EQMatcher.cpp  EQMatcher.h  LUFSMeter.cpp  LUFSMeter.h  ReferenceCurve.cpp  ReferenceCurve.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h  SystemSimulator.cpp  SystemSimulator.h
